[project]
name = "cti-daily-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.24",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "markdown>=3.10",
    "nvdlib>=0.8.3",
    "pymsteams>=0.2.5",
    "requests>=2.32.5",
]
